--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,3 +17,5 @@ messages:
   success: "&eВы кончили! Вы управились за %s секунд."
   reload: "&eКонфиг перезагружен."
   disturbed: "&eВас потревожили! Найдите место поукромнее."
+  hit-success: "&eОтлично! Прямо в %s."
+  were-hit: "&eВ вас попали камшотом!"
